# netty4-samples

./: .gitignore  README.md  test.h264
gupaoedu-vip-netty-chat/: pom.xml
gupaoedu-vip-netty-chat/src/main/cpp/: CMakeLists.txt  HelloJni2.h  JavaCallHelper.cpp  JavaCallHelper.h  capture_camera.cpp  com_ffmpeg_HelloJni.cpp  test_capture_camera.cpp  testyuv2h264.c
gupaoedu-vip-netty-chat/src/main/cpp/include/: JavaCallHelper.h  capture_camera.h  com_ffmpeg_CaptureCamera.h  com_ffmpeg_HelloJni.h  jni_init.h  test_capture_camera.h  threadsafe_queue.h
gupaoedu-vip-netty-chat/src/main/java/com/: StreamNum.java  Test.java  TestJoin.java  WOL.java
gupaoedu-vip-netty-chat/src/main/java/com/douyin/qushuiyin/: Test.java
gupaoedu-vip-netty-chat/src/main/java/com/ffmpeg/: CaptureCamera.java  HelloJni.java  HelloJni2.java
gupaoedu-vip-netty-chat/src/main/java/com/ffmpeg/cc/: test.c
gupaoedu-vip-netty-chat/src/main/java/com/gupaoedu/vip/netty/chat/udp/client/: ChineseProverbClient.java  ChineseProverbClientHandler.java
gupaoedu-vip-netty-chat/src/main/java/com/gupaoedu/vip/netty/chat/udp/server/: ChineseProverbServer.java  ChineseProverbServerHandler.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/: PkgUtil.java  doc.md
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/: TestClient1.java  TestClient2.java  TestClient3.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/audio/: DataQueue.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/sdk/: IMChat.java  IMLogin.java  IMLoginCallback.java  IMOnReceive.java  IMOnReceiveText.java  IMSdk.java  PingPongHandler.java  SdkHandler.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/sdk/codec/: IMEncoder.java  MessageUtil.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/sdk/impl/: Chat.java  Login.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/sdk/manager/: PkgManager.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/android/clinet/sdk/model/: AssemblePkg.java  ClientInfo.java  PkgInfo.java  WaitForFinish.java  WholePkg.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/client/sdk/: IMChat.java  IMLogin.java  IMOnReceive.java  IMSdk.java  PingPongHandler.java  SdkHandler.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/client/sdk/impl/: Chat.java  Login.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/client/test/: PingPongHandler.java  Test.java  TestHandler.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/codec/: IMDecoder.java  IMEncoder.java  MessageUtil.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/model/: AssemblePkg.java  ClientInfo.java  Message.java  PkgInfo.java  PooledManager.java  WaitForFinish.java  WholePkg.java
gupaoedu-vip-netty-chat/src/main/java/com/server/im/udp/server/: PingPongHandler.java  PkgManager.java  StateHandler.java  StateManager.java  UdpHandler.java  UdpServer.java
gupaoedu-vip-netty-chat/src/main/java/com/stun/test/: Test.java  TestSemaphore.java  stun.java
gupaoedu-vip-netty-chat/src/main/jniLib/: libcom_ffmpeg_HelloJni.dylib  libmyffmpeg.dylib
gupaoedu-vip-netty-chat/src/main/resources/: logback.xml
